--- a/config/unicorn/development.rb.example
+++ b/config/unicorn/development.rb.example
@@ -4,8 +4,8 @@ rails_env = ENV["RAILS_ENV"] || "development"
 worker_processes 1
 working_directory rails_root
 
-# listen "#{rails_root}/tmp/sockets/unicorn.sock", :backlog => 2048
-listen 8090, :tcp_nopush => false
+listen "#{rails_root}/tmp/sockets/unicorn.sock", :backlog => 2048
+# listen 8090, :tcp_nopush => false
 
 # nuke workers after 30 seconds instead of 60 seconds (the default)
 timeout 30
